==> danaolcott/atmel/source/same70/SAME70_SpaceInvaders/SAME70_SpaceInvaders/src/Display/lcd_12864_dfrobot.c <==
#include <string.h>
#include "asf.h"
#include "stdio_serial.h"
#include "conf_board.h"
#include "conf_clock.h"
#include "lcd_12864_dfrobot.h"
#include "spi_driver.h"
#include "font_table.h"			//fonts
#include "offset.h"				//offsets for font table
#include "bitmap.h"				//ImageData data type

void LCD_WriteCommand(uint8_t cmd)
{
	ioport_set_pin_level(LCD_CD_PIN, false);	//CD Pin - CMD - Low
	SPI_writeByte(cmd);		
}

void LCD_WriteData(uint8_t data)
{
	ioport_set_pin_level(LCD_CD_PIN, true);	//CD Pin - Data - High
	SPI_writeByte(data);
}

void LCD_WriteDataBurst(uint8_t* data, uint16_t length)
{
	ioport_set_pin_level(LCD_CD_PIN, true);	//CD Pin - Data - High
	SPI_writeArray(data, length);
}

void LCD_Config(void)
{
	//enable peripheral clocks for ports A, C, and D
	pmc_enable_periph_clk(ID_PIOA);								//enable the clock	
	pmc_enable_periph_clk(ID_PIOC);								//enable the clock
	pmc_enable_periph_clk(ID_PIOD);								//enable the clock
	
	//configure LCD specific pins - CS pin handled in SPI_Config
	ioport_set_pin_dir(LCD_BACKLIGHT_PIN, IOPORT_DIR_OUTPUT);	//backlight
	ioport_set_pin_dir(LCD_CD_PIN, IOPORT_DIR_OUTPUT);			//CMD/Data - 0 for command???
	ioport_set_pin_dir(LCD_RESET_PIN, IOPORT_DIR_OUTPUT);		//reset - active low

	ioport_set_pin_level(LCD_BACKLIGHT_PIN, false);				//off
	ioport_set_pin_level(LCD_CD_PIN, false);					//low
	ioport_set_pin_level(LCD_RESET_PIN, false);					//hold in reset

	//release from reset
	ioport_set_pin_level(LCD_RESET_PIN, true);					//hold in reset

	LCD_DummyDelay(100000);
	LCD_Reset();
	LCD_DummyDelay(100000);

	//configure registers - from u8g graphics lib for 
	//Newhaven display

	LCD_WriteCommand(0x40);				//set display start line
//	LCD_WriteCommand(0xA1);				//ADC set to reverse - display RAM address
	LCD_WriteCommand(0xA0);				//ADC set to normal - display RAM address

//	LCD_WriteCommand(0xC0);				//common output mode - normal
	LCD_WriteCommand(0xC8);				//common output mode - reverse


	LCD_WriteCommand(0xA6);				//display normal
	LCD_WriteCommand(0xA2);				//LCD bias 1/9
//	LCD_WriteCommand(0xA3);				//LCD bias 1/7


	LCD_WriteCommand(0x2F);				//all power control circuits on
	LCD_WriteCommand(0xF8);				//set booster ratio
	LCD_WriteCommand(0x00);				//4x
	LCD_WriteCommand(0x27);				//set V0 voltage register ratio to large
	LCD_WriteCommand(0x81);				//contrast
	LCD_WriteCommand(0x00);				//recommended contrast is 8, changed to 0
	LCD_WriteCommand(0xAC);				//indicator
	LCD_WriteCommand(0x00);				//disable
	LCD_WriteCommand(0xAF);				//display on

	LCD_DummyDelay(100000);
	LCD_WriteCommand(0xA5);				//display all points
	LCD_DummyDelay(100000);
	LCD_DummyDelay(100000);
	LCD_WriteCommand(0xA4);				//normal display

	LCD_Clear(0x00);
	LCD_On();

}

void LCD_Reset(void)
{
	ioport_set_pin_level(LCD_RESET_PIN, true);
	LCD_DummyDelay(100000);
	ioport_set_pin_level(LCD_RESET_PIN, false);
	LCD_DummyDelay(100000);
	ioport_set_pin_level(LCD_RESET_PIN, true);
}

void LCD_BacklightOn(void)
{
	ioport_set_pin_level(LCD_BACKLIGHT_PIN, true);
}

void LCD_BacklightOff(void)
{
	ioport_set_pin_level(LCD_BACKLIGHT_PIN, false);
}

void LCD_BacklightToggle(void)
{
	ioport_toggle_pin_level(LCD_BACKLIGHT_PIN);
}
