==> danaolcott/Games/Source/F411_asteroids/Display/lcd_12864_dfrobot.c <==
#include <string.h>				//sprintf??
#include <stdlib.h>				//abs function
#include "spi.h"				//spi control - SPI1
#include "gpio.h"				//pin control
#include "lcd_12864_dfrobot.h"
#include "font_table.h"			//fonts
#include "offset.h"				//offsets for font table
#include "bitmap.h"				//ImageData data type

void LCD_WriteCommand(uint8_t cmd)
{
	uint8_t command = cmd;
	HAL_GPIO_WritePin(LCD_CMD_GPIO_Port, LCD_CMD_Pin, GPIO_PIN_RESET);		//cmd
	HAL_GPIO_WritePin(SPI1_CS_GPIO_Port, SPI1_CS_Pin, GPIO_PIN_RESET);		//select
	HAL_SPI_Transmit(&hspi1, &command, 1, 0xFF);
	HAL_GPIO_WritePin(SPI1_CS_GPIO_Port, SPI1_CS_Pin, GPIO_PIN_SET);		//deselect
}

void LCD_WriteData(uint8_t data)
{
	uint8_t dat = data;
	HAL_GPIO_WritePin(LCD_CMD_GPIO_Port, LCD_CMD_Pin, GPIO_PIN_SET);		//data
	HAL_GPIO_WritePin(SPI1_CS_GPIO_Port, SPI1_CS_Pin, GPIO_PIN_RESET);		//select
	HAL_SPI_Transmit(&hspi1, &dat, 1, 0xFF);
	HAL_GPIO_WritePin(SPI1_CS_GPIO_Port, SPI1_CS_Pin, GPIO_PIN_SET);		//deselect
}

void LCD_WriteDataBurst(uint8_t* data, uint16_t length)
{
	HAL_GPIO_WritePin(LCD_CMD_GPIO_Port, LCD_CMD_Pin, GPIO_PIN_SET);		//data
	HAL_GPIO_WritePin(SPI1_CS_GPIO_Port, SPI1_CS_Pin, GPIO_PIN_RESET);		//select
	HAL_SPI_Transmit(&hspi1, data, length, 0xFF);
	HAL_GPIO_WritePin(SPI1_CS_GPIO_Port, SPI1_CS_Pin, GPIO_PIN_SET);		//deselect
}

void LCD_Config(void)
{

	//set initial states for backlight, CD, reset,
	HAL_GPIO_WritePin(LCD_Backlight_GPIO_Port, LCD_Backlight_Pin, GPIO_PIN_RESET);
	HAL_GPIO_WritePin(LCD_CMD_GPIO_Port, LCD_CMD_Pin, GPIO_PIN_RESET);
	HAL_GPIO_WritePin(LCD_Reset_GPIO_Port, LCD_Reset_Pin, GPIO_PIN_RESET);
	LCD_DummyDelay(100000);
	HAL_GPIO_WritePin(LCD_Reset_GPIO_Port, LCD_Reset_Pin, GPIO_PIN_SET);

	LCD_DummyDelay(100000);
	LCD_Reset();
	LCD_DummyDelay(100000);

	//configure registers - from u8g graphics lib for 
	//Newhaven display

	LCD_WriteCommand(0x40);				//set display start line
//	LCD_WriteCommand(0xA1);				//ADC set to reverse - display RAM address
	LCD_WriteCommand(0xA0);				//ADC set to normal - display RAM address

//	LCD_WriteCommand(0xC0);				//common output mode - normal
	LCD_WriteCommand(0xC8);				//common output mode - reverse


	LCD_WriteCommand(0xA6);				//display normal
	LCD_WriteCommand(0xA2);				//LCD bias 1/9
//	LCD_WriteCommand(0xA3);				//LCD bias 1/7


	LCD_WriteCommand(0x2F);				//all power control circuits on
	LCD_WriteCommand(0xF8);				//set booster ratio
	LCD_WriteCommand(0x00);				//4x
	LCD_WriteCommand(0x27);				//set V0 voltage register ratio to large
	LCD_WriteCommand(0x81);				//contrast

	LCD_WriteCommand(0x00);				//recommended contrast is 8, changed to 0

	LCD_WriteCommand(0xAC);				//indicator
	LCD_WriteCommand(0x00);				//disable
	LCD_WriteCommand(0xAF);				//display on

	LCD_DummyDelay(100000);
	LCD_WriteCommand(0xA5);				//display all points
	LCD_DummyDelay(100000);
	LCD_DummyDelay(100000);
	LCD_WriteCommand(0xA4);				//normal display

	LCD_Clear(0x00);
	LCD_On();

}

void LCD_Reset(void)
{
	HAL_GPIO_WritePin(LCD_Reset_GPIO_Port, LCD_Reset_Pin, GPIO_PIN_SET);
	LCD_DummyDelay(100000);
	HAL_GPIO_WritePin(LCD_Reset_GPIO_Port, LCD_Reset_Pin, GPIO_PIN_RESET);
	LCD_DummyDelay(100000);
	HAL_GPIO_WritePin(LCD_Reset_GPIO_Port, LCD_Reset_Pin, GPIO_PIN_SET);
}

void LCD_BacklightOn(void)
{
	HAL_GPIO_WritePin(LCD_Backlight_GPIO_Port, LCD_Backlight_Pin, GPIO_PIN_SET);
}

void LCD_BacklightOff(void)
{
	HAL_GPIO_WritePin(LCD_Backlight_GPIO_Port, LCD_Backlight_Pin, GPIO_PIN_RESET);
}

void LCD_BacklightToggle(void)
{
	HAL_GPIO_TogglePin(LCD_Backlight_GPIO_Port, LCD_Backlight_Pin);
}
